samples/_failures_safe/1761091768_d86106_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_921194c6.c: In function ‘main’:
./samples/SAFE/__tmp_921194c6.c:136:9: error: expected expression at end of input
  136 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_921194c6.c:136:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_921194c6.c:136:9: error: expected declaration or statement at end of input
